# OOP_project

./: README.md
calander/: CMakeLists.txt
calander/include/: calander.hpp  event.hpp
calander/src/: calander.cpp  main1.cpp
game character/: CMakeLists.txt
game character/include/: character1.hpp  game.hpp
game character/src/: character1.cpp  game.cpp  main.cpp
gps/include/: gps.hpp
gps/src/: gps.cpp  main1.cpp
gps_project/: CMakeLists.txt
gps_project/include/: gps.hpp
gps_project/src/: gps.cpp  main1.cpp
hospital/: CMakeLists.txt
hospital/include/: hospital.hpp  patient.hpp
hospital/src/: calander.cpp  event.cpp  hospital.cpp  main.cpp  patient.cpp
include/: hospital.hpp  patient.hpp
sky/: CMakeLists.txt
sky/include/: sky.hpp  star.hpp
sky/src/: main.cpp  sky.cpp  star.cpp
src/: main.cpp  patient.cpp
